# Fusion-RAG-Chatbot

./: README.md  check_chroma_db.py  consolidate_chroma_db.py  diagnose_chroma_dbs.py  missing_dependencies.txt  pyproject.toml  pyproject_updated.toml  test_end_to_end.py  verify_single_db.py
rag-backend/: config.py  document_processing.py  embedder.py  fusion_retriever.py  main.py  model_client.py  retriever.py  rrf_retriever.py  vertex_ai_setup.md
rag-frontend/: app.py
txt-files/: ASISTENCIA ASISTA FAMILIAR ASOCIADOS Y EMPLEADOS.txt  COIN 306 Vinculacion de asociados persona natural.txt  CONDICIONES TÉCNICAS DE SEGURO.txt  MANUAL DE SUSCRIPCIÓN  ACCIDENTES PERSONALES CON ANEXOS DE ENFERMEDADES GRAVES Y MUERTE ACCIDENTAL (RETENCION) POLIZA No. 3193500001 (Mantenimiento) 1.txt  MANUAL DE SUSCRIPCIÓN  SEGURO DE VIDA  HALL BANCARIO Y TMK  CUPO ACTIVO HALL PÓLIZA 3496800001.txt  MANUAL DE SUSCRIPCIÓN  SEGURO DE VIDA CON ANEXO DE ACCIDENTES PERSONALES.txt  MANUAL DE SUSCRIPCIÓN  SEGURO DE VIDA Y SUSTRACCIÓN  HALL BANCARIO Y TMK CUPO ACTIVO HALL PÓLIZAS 3497000001 TARJETAS HALL PÓLIZ.txt  MANUAL DE SUSCRIPCIÓN ACCIDENTES PERSONALES CON ANEXOS DE INCAPACIDAD TOTAL TEMPORAL, ENFERMEDADES GRAVES VIVIENDA (MULTIPRIMA)  POLIZAS No. 3196600001 VIDA GRUPO.txt  MANUAL DE SUSCRIPCIÓN DESEMPLEO CON ANEXOS DE ENFERMEDADES GRAVES Y MUERTE ACCIDENTAL (POR RETENCIÓN PÓLIZAS2493000001 2493100001 2493200001.txt  MANUAL DE SUSCRIPCIÓN DESEMPLEO CON ANEXOS DE ENFERMEDADES GRAVES Y MUERTE ACCIDENTAL POLIZAS 249560000.txt  MANUAL RENOVACION RC PROFESIONAL RC MEDICA LIBERTY 2024-2025 1.txt  (+14 more)
(+13 files in other folders)
